<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">*Flixbmc Client</string>
    <string name="settings_short_label">Settings</string>
    <string name="settings_label">*Flixbmc Client Settings</string>

    <string name="settings_label_kodi">Kodi RPC Settings</string>
    <string name="settings_label_netflix">Netflix Settings</string>

    <string name="settings_shortcut">s</string>
    
    <string name="pref_url_title">Url</string>
    <string name="pref_url_summary">Specify a host (E.g. http://host:port)</string>

    <string name="pref_kodi_username_title">Username</string>
    <string name="pref_kodi_username_summary">Specify your kodi web interface username</string>

    <string name="pref_kodi_password_title">Password</string>
    <string name="pref_kodi_password_summary">Specify your kodi web interface password</string>

    <string name="pref_netflix_username_title">Username</string>
    <string name="pref_netflix_username_summary">Specify your netflix username</string>

    <string name="pref_netflix_password_title">Password</string>
    <string name="pref_netflix_password_summary">Specify your netflix password</string>
    
    <string name="pref_host_url">kodi_jsonrpc_url</string>
    <string name="pref_kodi_username">kodi_username</string>
    <string name="pref_kodi_password">kodi_password</string>
    <string name="pref_netflix_username">netflix_username</string>
    <string name="pref_netflix_password">netflix_password</string>

    <string name="settings_button">Settings</string>

    <string name="invalid_kodi_settings">Invalid Kodi Settings</string>
    <string name="invalid_netflix_settings">Invalid Netflix Settings</string>
    <string name="kodi_instance_not_accessible">Kodi instance not accessible</string>

    <string name="connecting_to_kodi">Connecting to Kodi...</string>
    <string name="play_on_kodi_request_successful">Play on Kodi Request Successful</string>

    <string name="login_failed">Login failed</string>
    <string name="url_not_supported">URL Not Supported</string>

    <string name="netflix_share_not_supported">Netflix Shared not supported</string>
    <string name="unexpected_error">Unexpected Error</string>

    <string name="checking_kodi_url">Checking Kodi Url Configuration</string>
    <string name="netflixbmc_plugin_not_installed">The netflixbmc plugin is not installed</string>

    <string name="netflix_invalid_credentials">Your Netflix Credentials are invalid.  Remember your password is case sensitive</string>
    <string name="netflix_not_responding">Netflix is not responding, please try again</string>
    <string name="netflix_not_available">Netflix is not available</string>

    <string name="ignore">Ignore</string>
    <string name="retry">Retry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_exit_message">Are you sure you want to Exit?</string>
</resources>